--- a/pages/business/details/details.wxss
+++ b/pages/business/details/details.wxss
@@ -44,7 +44,7 @@ display: flex;align-items: center;justify-content: center;
 
 
 /* 案例 */
-.case{}
+.case{padding-bottom: 10rpx;border-bottom:1px solid rgba(229, 229, 229, 1);}
 .case .head_box{display: flex;align-items: center;justify-content:space-between;color: rgba(80, 80, 80, 1);margin:18rpx 25rpx;}
 .case .head_box view:nth-child(1){font-size: 28rpx;}
 .case .head_box view:nth-child(2){font-size: 20rpx;display: flex;align-items:center}
@@ -54,3 +54,43 @@ display: flex;align-items: center;justify-content: center;
 .case_item{width: 50%;display:flex;justify-content:center;margin-bottom:22rpx;}
 .conent_box image{width: 336rpx;height: 156rpx; border-radius: 16rpx; }
 .case_item_title{color: rgba(80, 80, 80, 1);font-size: 24rpx;margin-top:-5rpx;  overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width:334rpx;}
+
+
+
+/* 现场 */
+.scene_box{padding-bottom: 20rpx;border-bottom:1px solid rgba(229, 229, 229, 1);}
+.scene_box .head_box{display: flex;align-items: center;justify-content:space-between;color: rgba(80, 80, 80, 1);margin:18rpx 25rpx;}
+.scene_box .head_box view:nth-child(1){font-size: 28rpx;}
+.scene_box .head_box view:nth-child(2){font-size: 20rpx;display: flex;align-items:center}
+.scene{display: flex;}
+
+.scene_box scroll-view{display: flex;width:100vw; hight: 200rpx;white-space: nowrap;}
+.scene_box .scroll-view{display: flex;}
+.scene_box .content_box{width:300rpx;text-align: center;margin-left:28rpx;}
+.scene_box .content_box .image{width: 300rpx;height: 180rpx;border-radius: 8px;}
+.scene_box .content_box view:nth-child(2){color: rgba(0, 0, 0, 1);font-size: 24rpx;}
+.scene_box .content_box view:nth-child(3){color: rgba(128, 128, 128, 1);font-size: 16rpx;}
+.scene_box .content_box view:nth-child(4){width: 240rpx;height:38rpx;color: rgba(255, 255, 255, 1);background-color: rgba(236, 65, 73, 1);border-radius: 16rpx;font-size: 20rpx;margin:0 auto;line-height:38rpx;
+}
+
+/* 信息 */
+.info_box{padding-bottom: 10rpx;border-bottom:1px solid rgba(229, 229, 229, 1);}
+.info_box .head_box{display: flex;align-items: center;justify-content:space-between;color: rgba(80, 80, 80, 1);margin:18rpx 25rpx;}
+.info_box .head_box view:nth-child(1){font-size: 28rpx;}
+.info_box .head_box view:nth-child(2){font-size: 20rpx;display: flex;align-items:center}
+.info_box .list{display: flex;font-size: 24rpx;margin:0 25rpx 14rpx;}
+.info_box .list view:nth-child(1){color: rgba(128, 128, 128, 1);width: 120rpx;}
+.info_box .list view:nth-child(2){color: rgba(80, 80, 80, 1);width:82%;}
+
+.bottom_distance{margin-bottom:66rpx;}
+/* 底部按钮 */
+.bottom_box{position:fixed;bottom: 0;left: 0;display:flex;height:90rpx;color: rgba(128, 128, 128, 1);font-size: 20rpx;background: rgba(250, 250, 250, 1);width: 100%;padding-left:35rpx;align-items: center;background: rgba(250, 250, 250, 1)}
+.bottom_box .left image{width:38rpx;height:36rpx;}
+.bottom_box .center image{width:36rpx;height: 36rpx;} 
+.bottom_box .buttom{text-align:center;}
+.left .name{}
+.bottom_box .center .name{}
+.bottom_box .center{margin:0 50rpx 0 40rpx;}
+.bottom_box .right{width: 480rpx;height: 58rpx;color: rgba(255, 255, 255, 1);font-size: 24rpx;display: flex;text-align:center;line-height: 58rpx}
+.bottom_box .right view:nth-child(1){width: 50%;background: rgba(236, 65, 73, 1);border-radius:30rpx 0 0 30rpx;}
+.bottom_box .right view:nth-child(2){width: 50%;background: rgba(255, 141, 26, 1);border-radius:0 30rpx 30rpx 0;}
