--- a/pages/home/estimate/estimate.wxss
+++ b/pages/home/estimate/estimate.wxss
@@ -20,7 +20,7 @@ page{background-color: #FAFAFA;color: rgba(80, 80, 80, 1);}
  
 .radio-group{display: flex;justify-content: space-around;}
 .radio-group_two{display: flex;justify-content: space-between;margin:10rpx 0;}
-.name{color: rgba(56, 56, 56, 1);font-size: 26rpx;} 
+.name{color: rgba(56, 56, 56, 1);font-size: 26rpx;margin-right:10rpx;} 
 .radio_box{margin-bottom:18rpx;}
 .origin{display: flex;margin:8rpx 35rpx;align-items: center;position:relative;}
 .origin_input{width:500rpx;}
@@ -67,7 +67,7 @@ page{background-color: #FAFAFA;color: rgba(80, 80, 80, 1);}
 
 .obtain_price_button{margin-top:28rpx;width: 636rpx;height: 64rpx;color: rgba(80, 80, 80, 1);background-color: rgba(237, 59, 72, 1);border-radius: 16rpx;font-size: 28rpx; box-shadow: 0px 5px 5px 0px rgba(237, 59, 72, 0.3);text-align: center;color: rgba(255, 255, 255, 1);display: flex;align-items: center;justify-content: center;}
 /* .radio{padding:10rpx 15rpx;} */
-.radio_click{background:rgba(233, 233, 233, 1);border-radius: 8rpx;}
+.radio_click{background:rgba(233, 233, 233, 1);border-radius: 8rpx;display:flex;justify-content:center;align-items:center;padding:6rpx 0;}
 radio {transform:scale(0.7);}
 
 
@@ -89,3 +89,6 @@ radio {transform:scale(0.7);}
 .goods_content .button{width:280rpx;height: 66rpx;color: #FFFFFF;background-color: rgba(237, 59, 72, 1);border-radius: 8rpx;font-size: 28rpx;box-shadow: 0px 6px 6px 0px rgba(237, 59, 72, 0.3);text-align: center;}
 .goods_content .no_goods{text-align: center;width: 100%;margin-top: 96rpx;font-size: 30rpx;color: #999999;}
 .gb_image{position:absolute;top:-17rpx;right:4rpx;width:45rpx;height:45rpx;} 
+
+
+.radio_box .radio{padding:8rpx 0;}
