--- a/pages/my/myorder/myorder.wxss
+++ b/pages/my/myorder/myorder.wxss
@@ -4,8 +4,9 @@ page{background-color: #FAFAFA;}
 .tab_item{width: 33.33%;text-align: center;font-size: 28rpx;height: 60rpx}
 .new{width: 112rpx;height: 56rpx;border-bottom: 4rpx solid rgba(236, 65, 73, 1);margin: 0 auto;}
 .scroll_swipor{overflow-y: scroll;overflow: hidden;}
-.scroll_list{margin: 30rpx 24rpx;background-color: rgba(255, 255, 255, 1);box-shadow: 0px 0px 12px 0px rgba(166, 166, 166, 0.3214285714285714);border-radius: 16rpx;}
-.scroll_li{text-align: center;font-size: 28rpx;color: rgba(0, 0, 0, 1);padding: 12rpx 0 18rpx;}
+.scroll_list{margin: 30rpx 24rpx;background-color: rgba(255, 255, 255, 1);box-shadow: 0px 0px 12px 0px rgba(166, 166, 166, 0.3214285714285714);border-radius: 16rpx;position: relative;}
+.scroll_del{position: absolute;box-shadow: 0px 0px 12px 0px rgba(166, 166, 166, 0.3214285714285714);background-color:#32b3f1;left: 0;top: 0;width: 55rpx;height: 55rpx;line-height: 55rpx;text-align: center;border: 1px solid #fff;border-radius: 16rpx;color: #fff;font-size: 32rpx;}
+.scroll_li{text-align: center;font-size: 28rpx;color: rgba(0, 0, 0, 1);padding: 12rpx 0 20rpx;}
 .scroll_li2{display: flex;align-items: center;justify-content: space-between;padding: 0rpx 28rpx}
 .guoq{width: 40rpx;height: 28rpx;margin-top: 10rpx;}
 .jianto{width:300rpx;height: 10rpx;}
