--- a/pages/my/consultation/consultation.wxml
+++ b/pages/my/consultation/consultation.wxml
@@ -1,5 +1,5 @@
 <view class="contation_b">
-  <navigator class="contation">
+  <navigator class="contation" url="./seek/seek">
     <view class="contation_1">我要搬运</view>
     <image src="../../../images/t0169ed52127b821764.jpg" class="contation_img"></image>
     <view class="contation_2">
@@ -8,7 +8,7 @@
       <view class="text_time">2019-07-01 20:20</view>
     </view>
   </navigator> 
-  <navigator class="contation">
+  <navigator class="contation" url="./seek/seek">
     <view class="contation_1">国际搬家</view>
     <image src="../../../images/t0169ed52127b821764.jpg" class="contation_img"></image>
     <view class="contation_2">
@@ -17,7 +17,7 @@
       <view class="text_time">2019-07-01 20:20</view>
     </view>
   </navigator> 
-  <navigator class="contation">
+  <navigator class="contation" url="./seek/seek">
     <view class="contation_1">国际快递</view>
     <image src="../../../images/t0169ed52127b821764.jpg" class="contation_img"></image>
     <view class="contation_2">
