--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -8,14 +8,14 @@
         <view>
           <view class="xm_b">
             <view class="name_xm">小明家</view>
-            <image src="../../images/已实名 (1).png" class="xm_img"></image>
+            <image src="../../images/sm1.png" class="xm_img"></image>
           </view>
           <view class="dj_name">等级：LV.1</view>
         </view>
       </view>
       <view class="set_box">
         <navigator url="./ringing/ringing">
-          <image class="set" src="../../images/消息.png" mode="scaleToFill" ></image>
+          <image class="set" src="../../images/ringing.png" mode="scaleToFill" ></image>
         </navigator>
         <navigator url="./setup/setup">
           <image class="set" src="../../images/seizi.png" mode="scaleToFill" ></image>
@@ -25,13 +25,13 @@
     <view class="header_b_1_2">
       <view class="dingd_b">
         <navigator url="./myorder/myorder">
-          <image src="../../images/采购订单_1.png" class="name_image"></image>
+          <image src="../../images/myorder.png" class="name_image"></image>
           <view class="name">我的订单</view>
         </navigator>
       </view>
       <view>
         <navigator url="./mywallet/mywallet">
-          <image src="../../images/钱包 (1).png" class="name_image"></image>
+          <image src="../../images/mywallet.png" class="name_image"></image>
           <view class="name">我的钱包</view>
         </navigator>
       </view>
@@ -51,31 +51,31 @@
 		<view class="gn">常用功能</view>
 		<view class="button">
 			<navigator class="button_box" url="./consultation/consultation">
-				<image src="../../images/我的咨询.png"  class="name_image"></image>
+				<image src="../../images/consultation.png"  class="name_image"></image>
 				<div class="name">我的咨询</div>
 			</navigator>
 			<navigator class="button_box" url="./myrecord/myrecord">
-				<image src="../../images/我的收藏 (1).png" class="name_image"></image>
+				<image src="../../images/myrecord.png" class="name_image"></image>
 				<div class="name">我的记录</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/我的金币.png" class="name_image dd"></image>
+				<image src="../../images/jbi11.png" class="name_image dd"></image>
 				<div class="name">报价中心</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/合同.png" class="name_image"></image>
+				<image src="../../images/ht11.png" class="name_image"></image>
 				<div class="name">合同中心</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/阅读记录.png" class="name_image"></image>
+				<image src="../../images/bbj11.png" class="name_image"></image>
 				<div class="name">我的搬家记</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/晒单.png" class="name_image saidan"></image>
+				<image src="../../images/sd111.png" class="name_image saidan"></image>
 				<div class="name">晒单评论</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/工具.png" class="name_image gj"></image>
+				<image src="../../images/gjx11.png" class="name_image gj"></image>
 				<div class="name">工具箱</div>
 			</navigator>
 			<navigator class="button_box" url="./changing_over/changing_over">
@@ -87,20 +87,20 @@
 	<view class="content_box">
 		<view class="gn">更多服务</view>
 		<view class="button">
-			<navigator class="button_box">
-				<image src="../../images/账户安全1.png"  class="name_image"></image>
+			<navigator class="button_box" url="./security/security">
+				<image src="../../images/security.png"  class="name_image"></image>
 				<div class="name">安全中心</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/客服 @2x.png" class="name_image"></image>
+				<image src="../../images/kf22.png" class="name_image"></image>
 				<div class="name">客服中心</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/首页ICON_商家入驻敬请期待.png" class="name_image"></image>
+				<image src="../../images/rz111.png" class="name_image"></image>
 				<div class="name">我要入驻</div>
 			</navigator>
 			<navigator class="button_box">
-				<image src="../../images/更多.png" class="name_image gd"></image>
+				<image src="../../images/gduo.png" class="name_image gd"></image>
 				<div class="name">更多</div>
 			</navigator>
 		</view>
