--- a/components/goods/goods.wxml
+++ b/components/goods/goods.wxml
@@ -37,6 +37,14 @@
 		</view>
 	</view>
 </veiw>
+<view class="goods_people">
+	<text space="ensp" bindtap="godos_list">物品清单 <text class="iconfont icon-moreunfold "></text></text>
+	<text space="ensp" data-who="1" bindtap="member_map">附近人员 <text class="iconfont icon-more "></text></text>
+</view>
+<view class="volume">  
+	<view class="volume_name">体积：</view> 
+	<view class="volume_input"><input disabled value="{{weight}}" placeholder="此为预估体积"/></view>
+</view>
 
 
 <view class="" wx:if="{{state}}" catchtouchmove="move">
@@ -54,10 +62,33 @@
 							<image src="../../images/plus.png" class="plus_reduce"  bindtap="plus_reduce" data-volume="{{item.volume}}" data-number="{{item.number}}" data-ids="{{item.id}}" data-id="{{index}}" data-index="2"  ></image></view>
 					</view>
 				</block>
-				 
-				
 			</view>
 		</scroll-view>
 		<view class="button_box"><button class="button" bindtap="sure">确定</button></view>
 	</view>
 </view>
+
+<!-- 物品清单 -->
+<view class="" wx:if="{{state_list}}" catchtouchmove="move"> 
+		<view class="curtain"></view>
+		<view class="goods_content">
+			<scroll-view scroll-y="true">
+				<view class="box_two">
+					<view wx:if="{{choice_data==''}}" class="no_goods">
+						赶紧去添加物品把！
+					</view>  
+						<view class="commodity" wx:for="{{choice_data}}">
+							<view><image class="commodity_image" src="{{item.image}}"></image></view>
+							<view class="commodity_name">{{item.name}}</view>
+							<view class="commodity_operation">
+								<image src="../../images/reduce.png" class="plus_reduce"  bindtap="plus_reduce_two" data-number="{{item.number}}" data-volume="{{item.volume}}" data-id="{{item.id}}" data-index="{{index}}" data-jj="1" ></image>
+								<text space="ensp">{{item.number}}</text>
+								<image src="../../images/plus.png"   class="plus_reduce"  bindtap="plus_reduce_two" data-number="{{item.number}}" data-volume="{{item.volume}}" data-id="{{item.id}}" data-index="{{index}}" data-jj="2"  ></image>
+							</view>
+							<image src="../../images/510beee62bf1f87edda0d4b7873f73e.png" class="gb_image" bindtap="delete_goods" data-volume="{{item.volume}}" data-number="{{item.number}}" data-index="{{index}}" data-id="{{item.id}}" data-tid="{{item.tid}}"></image>
+						</view> 
+				</view>
+			</scroll-view>
+			<view class="button_box"><button class="button" bindtap="godos_list">确定</button></view>
+		</view>
+	</view>
