--- a/components/goods/goods.wxss
+++ b/components/goods/goods.wxss
@@ -12,10 +12,21 @@
 scroll-view {width:700rpx;height:946rpx;}
 
 .box_two{display: flex;flex-wrap: wrap;}
-.commodity{width: 30%;display: flex;align-items: center;flex-direction:column;margin:24rpx 11rpx;color: rgba(80, 80, 80, 1);}
+.commodity{width: 30%;display: flex;align-items: center;flex-direction:column;margin:24rpx 11rpx;color: rgba(80, 80, 80, 1);position: relative;}
 .commodity_image{height:182rpx;width: 160rpx;}
 .commodity_name{font-size: 20rpx;margin:2rpx 0 5rpx 0;}
 .commodity_operation{display: flex;width: 160rpx;justify-content: space-between;}
 .plus_reduce{width: 40rpx;height:40rpx; }
 .button_box{margin:20rpx 0;}
 .button{width:280rpx;height: 66rpx;color: #FFFFFF;background-color: rgba(237, 59, 72, 1);border-radius: 8rpx;font-size: 28rpx;box-shadow: 0px 6px 6px 0px rgba(237, 59, 72, 0.3);text-align: center;}
+.goods_people{display:flex;justify-content: space-between;margin: 0 65rpx;}
+
+.volume{display: flex;padding:10rpx 65rpx;align-items: center;}
+.volume_two{display: flex;padding:10rpx 35rpx 10rpx 65rpx;align-items: center;justify-content: space-between;}
+.volume_three{display: flex;padding:10rpx 35rpx;align-items: center;justify-content: space-between;}
+.volume_input{width:460rpx;} 
+.volume_input_two{width:460rpx; font-size: 20rpx;}
+.volume_name{width: 110rpx;}
+.volume_time{color: rgba(166, 166, 166, 1);font-size: 20rpx;display: flex;align-items: center;}
+.gb_image{position:absolute;top:-17rpx;right:4rpx;width:45rpx;height:45rpx;}  
+.no_goods{text-align: center;width: 100%;margin-top: 96rpx;font-size: 30rpx;color: #999999;}
