--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -108,9 +108,11 @@
   <view class="feedback">
     <navigator>意见反馈</navigator>
   </view>
-  <view class="platform_b">
-    <view>平台规则</view>
-    <image src="../../images/fii.png"></image>
+  <view>
+    <navigator class="platform_b" url="./platformrules/platformrules">
+      <view>平台规则</view>
+      <image src="../../images/fii.png"></image>
+    </navigator>
   </view>
 	<!-- 商户 -->
 	<!-- <view class="content_box">
