--- a/pages/my/mywallet/mywallet.wxml
+++ b/pages/my/mywallet/mywallet.wxml
@@ -1,24 +1,19 @@
-<view class="tab">
-  <view class="tab_item" wx:for="{{tab}}" bindtap="newChoice" data-index="{{index}}">
-    <view class="border {{new_choice==index?'new':''}}">{{item}}</view>
+<view class="mywallet">
+  <view class="mywallet_1">
+    <navigator class="mywallet_text" url="./mycash/mycash">
+      <image src="../../../images/7f993af5c636ddd092b3a27b70f6d99.png" class="mywallet_img"></image>
+      <view class="mywallet_num">￥200.00</view>
+      <view class="mywallet_name">我的现金</view>
+    </navigator>
+    <navigator class="mywallet_text">
+      <image src="../../../images/0e73984a16756bf1308e4abd2152255.png" class="mywallet_img"></image>
+      <view class="mywallet_num">30</view>
+      <view class="mywallet_name">我的积分</view>
+    </navigator>
+    <navigator class="mywallet_text">
+      <image src="../../../images/952269e19b4097eb5fcb64972640a8c.png" class="mywallet_img"></image>
+      <view class="mywallet_num">3</view>
+      <view class="mywallet_name">优惠券</view>
+    </navigator>
   </view>
-</view>
-<view class="list">
-  <swiper current="{{new_choice}}" duration="200"  bindchange="switchTab" style="height:{{winHeight}}rpx">
-    <swiper-item>
-      <scroll-view scroll-y="true" class="scoll-h">
-        1
-      </scroll-view>
-    </swiper-item>
-    <swiper-item>
-      <scroll-view scroll-y="true" class="scoll-h">
-        2
-      </scroll-view>
-    </swiper-item>
-    <swiper-item>
-      <scroll-view scroll-y="true" class="scoll-h">
-       3
-      </scroll-view>
-    </swiper-item>
-  </swiper>
 </view>
