--- a/pages/my/mywallet/mywallet.wxss
+++ b/pages/my/mywallet/mywallet.wxss
@@ -1,5 +1,7 @@
 page{background-color: #FAFAFA;}
-.tab{display: flex;border-bottom: 2rpx solid rgba(229, 229, 229, 1);}
-.tab_item{width: 33.33%;text-align: center;font-size: 28rpx;height: 60rpx}
-.new{width: 112rpx;height: 56rpx;border-bottom: 4rpx solid rgba(236, 65, 73, 1);margin: 0 auto;}
-.scoll-h{width: 100%;}
+.mywallet{border-top: 2rpx solid rgba(229, 229, 229, 1);padding: 45rpx 32rpx 0;}
+.mywallet_1{background-color: rgba(236, 65, 73, 1);border-radius: 16rpx;box-shadow: 0px 0px 12px 5px rgba(236, 65, 73, 0.3);display: flex;align-items: center;justify-content: space-between;padding: 40rpx 45rpx;}
+.mywallet_text{color: rgba(255, 255, 255, 1);text-align: center}
+.mywallet_img{width: 72rpx;height: 72rpx;}
+.mywallet_num{font-size: 20rpx;margin: 15rpx 0}
+.mywallet_name{font-size: 28rpx;}
