--- a/pages/my/security/clickalarm/clickalarm.wxss
+++ b/pages/my/security/clickalarm/clickalarm.wxss
@@ -1,13 +1,13 @@
 @import '../../../../utils/iconfont.wxss'; 
-.alarm_name1{color: rgba(236, 65, 73, 1);font-size: 44rpx;text-align: center;margin-top: 50rpx;}
+.alarm_name1{color: rgba(236, 65, 73, 1);font-size: 44rpx;text-align: center;margin-top: 50rpx;font-weight: bold}
 .alarm_name2{color: rgba(128, 128, 128, 1);font-size: 24rpx;text-align: center;margin-top: 15rpx;}
 .alarm_wz{background-color: rgba(250, 250, 250, 1);border-radius: 16rpx;box-shadow: 0px 0px 12px 0px rgba(166, 166, 166, 0.5);margin: 36rpx 52rpx;padding: 22rpx 40rpx 30rpx}
 .alarm_wz_1{color: rgba(128, 128, 128, 1);font-size: 28rpx;}
-.alarm_wz_2{color: rgba(0, 0, 0, 1);font-size: 32rpx;padding-top: 16rpx}
+.alarm_wz_2{color: rgba(0, 0, 0, 1);font-size: 32rpx;padding-top: 16rpx;font-weight: bold}
 .alarm_b{position: fixed;left: 52rpx;right: 52rpx;bottom: 0;}
-.alarm_text1{color: rgba(128, 128, 128, 1);font-size: 28rpx;padding-bottom: 30rpx;}
+.alarm_text1{color: rgba(128, 128, 128, 1);font-size: 28rpx;padding-bottom: 30rpx;font-weight: bold}
 .alarm_text2{display: flex;align-items: center;color: rgba(128, 128, 128, 1);font-size: 24rpx;margin-bottom: 18rpx;}
 .alarm_img{width: 48rpx;height: 48rpx;margin-right: 26rpx;}
-.alarm_text3{background-color: rgba(236, 65, 73, 1);border-radius: 16rpx;box-shadow: 0px 4px 4px 0px rgba(236, 65, 73, 0.3);text-align: center;color: rgba(255, 255, 255, 1);font-size: 28rpx;margin-top: 28rpx;padding: 20rpx 0}
+.alarm_text3{font-weight: bold;background-color: rgba(236, 65, 73, 1);border-radius: 16rpx;box-shadow: 0px 4px 4px 0px rgba(236, 65, 73, 0.3);text-align: center;color: rgba(255, 255, 255, 1);font-size: 28rpx;margin-top: 28rpx;padding: 20rpx 0}
 .alarm_text4{background-color: #fff;border-radius: 16rpx;text-align: center;margin-top: 15rpx;padding: 20rpx 0;color: rgba(166, 166, 166, 1);font-size: 24rpx;}
 .alarm_icon{vertical-align: middle}
