--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -95,7 +95,7 @@
 				<image src="../../images/kf22.png" class="name_image"></image>
 				<div class="name">客服中心</div>
 			</navigator>
-			<navigator class="button_box">
+			<navigator class="button_box" url="./joiningin/joiningin">
 				<image src="../../images/rz111.png" class="name_image"></image>
 				<div class="name">我要入驻</div>
 			</navigator>
@@ -106,7 +106,7 @@
 		</view>
 	</view>
   <view class="feedback">
-    <navigator>意见反馈</navigator>
+    <navigator url="./feedback/feedback">意见反馈</navigator>
   </view>
   <view>
     <navigator class="platform_b" url="./platformrules/platformrules">
