--- a/pages/my/mywallet/mywallet.wxml
+++ b/pages/my/mywallet/mywallet.wxml
@@ -5,7 +5,7 @@
       <view class="mywallet_num">￥200.00</view>
       <view class="mywallet_name">我的现金</view>
     </navigator>
-    <navigator class="mywallet_text">
+    <navigator class="mywallet_text" url="./mypoints/mypoints">
       <image src="../../../images/0e73984a16756bf1308e4abd2152255.png" class="mywallet_img"></image>
       <view class="mywallet_num">30</view>
       <view class="mywallet_name">我的积分</view>
