--- a/pages/my/myorder/myorder.wxss
+++ b/pages/my/myorder/myorder.wxss
@@ -1,7 +1,7 @@
 @import '../../../utils/iconfont.wxss'; 
 page{background-color: #FAFAFA;}
 .tab{display: flex;border-bottom: 2rpx solid rgba(229, 229, 229, 1);}
-.tab_item{width: 33.33%;text-align: center;font-size: 28rpx;height: 60rpx}
+.tab_item{width: 33.33%;text-align: center;font-size: 28rpx;}
 .new{width: 112rpx;height: 56rpx;border-bottom: 4rpx solid rgba(236, 65, 73, 1);margin: 0 auto;}
 .scroll_swipor{overflow-y: scroll;overflow: hidden;}
 .scroll_list{margin: 30rpx 24rpx;background-color: rgba(255, 255, 255, 1);box-shadow: 0px 0px 12px 0px rgba(166, 166, 166, 0.3214285714285714);border-radius: 16rpx;position: relative;}
