--- a/pages/my/mywallet/mycash/mycash.wxss
+++ b/pages/my/mywallet/mycash/mycash.wxss
@@ -6,3 +6,4 @@
 .mycash_text_1{background-color: rgba(236, 65, 73, 1);border-radius: 16rpx;box-shadow: 0px 5px 5px 0px rgba(236, 65, 73, 0.3);font-weight: bold;color: rgba(255, 255, 255, 1);font-size: 32rpx; padding: 16rpx 0;margin-bottom: 40rpx;border: rgba(236, 65, 73, 1) solid 1px}
 .mycash_text_2{color: rgba(236, 65, 73, 1);font-size: 32rpx;background-color: rgba(236, 65, 73, 0);border: rgba(236, 65, 73, 1) solid 1px;border-radius: 16rpx;padding: 16rpx 0;font-weight: bold;}
 .mycash_text_3{color: rgba(128, 128, 128, 1);font-size: 28rpx;margin-top: 50rpx;}
+.scoll-h{height: 100%}
