--- a/pages/my/ringing/ringing.wxss
+++ b/pages/my/ringing/ringing.wxss
@@ -1,6 +1,6 @@
 
 .tab{display: flex;border-bottom: 2rpx solid rgba(229, 229, 229, 1);}
-.tab_item{width: 33.33%;text-align: center;font-size: 28rpx;height: 60rpx}
+.tab_item{width: 33.33%;text-align: center;font-size: 28rpx;}
 .new{width: 112rpx;height: 56rpx;border-bottom: 4rpx solid rgba(236, 65, 73, 1);margin: 0 auto;}
 .scroll_list{display: flex;align-items: center; margin-left: 32rpx;padding-top:23rpx}
 .scroll_img{width: 84rpx;height:84rpx;border-radius: 50%;margin-right: 15rpx;margin-bottom: 18rpx}
